--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 /* Подключение шрифтов */
-@import "fonys.css";
+@import "fonts.css";
 /* Подключение основных стилей */
 @import "base.css";
 /* Подключение стилей относящихся к header */
