--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,20 +1,20 @@
 @font-face {
     font-family: "Montserrat";
-    src: url("../fonts/Montserrat-Regular.ttf");
+    src: url("../fonts/MontserratRegular.woff2");
     font-weight: normal;
     font-style: normal;
     font-display: swap;
     }
     @font-face {
     font-family: "Montserrat";
-    src: url("../fonts/Montserrat-Bold.ttf");
+    src: url("../fonts/MontserratBold.woff2");
     font-weight: bold;
     font-style: normal;
     font-display: swap;
     }
     @font-face {
     font-family: "Montserrat";
-    src: url("../fonts/Montserrat-Italic.ttf");
+    src: url("../fonts/MontserratMedium.woff2");
     font-weight: normal;
     font-style: italic;
     font-display: swap;
