--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,21 +1,21 @@
 @font-face {
     font-family: "Montserrat";
-    src: url("../fonts/MontserratRegular.woff2");
-    font-weight: normal;
+    src: url("../fonts/MontserratRegular.woff2") format('woff2');
+    font-weight: 300;
     font-style: normal;
     font-display: swap;
     }
     @font-face {
     font-family: "Montserrat";
-    src: url("../fonts/MontserratBold.woff2");
-    font-weight: bold;
+    src: url("../fonts/MontserratBold.woff2") format('woff2');
+    font-weight: 500;
     font-style: normal;
     font-display: swap;
     }
     @font-face {
     font-family: "Montserrat";
-    src: url("../fonts/MontserratMedium.woff2");
-    font-weight: normal;
+    src: url("../fonts/MontserratMedium.woff2") format('woff2');
+    font-weight: 400;
     font-style: italic;
     font-display: swap;
     }
