--- a/styles/base.css
+++ b/styles/base.css
@@ -19,3 +19,8 @@ img {
     max-width: 100%;
     height: auto;
 }
+.container{
+    width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
+}
