--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,17 @@
     color: black;
     box-shadow: 1px 2px 20px 5px #fefefe;
    }
+   .catalog__name{
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+   }
+   .catalog__color{
+    margin-top: 0;
+    margin-bottom: 15px;
+   }
    .catalog{
     margin: 0;
     padding: 20px 0;
@@ -13,17 +24,51 @@
     flex-wrap: wrap;
     list-style-type: none;
    }
+   .catalog__button{
+    display: block;
+    padding: 10px;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    text-align: center;
+   }
    .catalog__card{
     display: flex;
     flex-direction: column;
    }
-   .catalog__link{
+   .catalog__button{
     margin-top: auto;
    }
    .catalog__image{
     width: 100%;
-    height: 300px;
+    height: 500px;
     object-fit: cover;
-   }         
+   }     
+   .about{
+    display:flex;
+    gap: 10px;
+   }    
+   .about__wrap-right{
+    width: 500px;
+    flex-shrink: 0;
+   }
+   .about{
+    background-color: rgb(255, 255, 255);
+     color: rgb(0, 0, 0);
+     padding: 10px;
+    }
+    .about__button{
+        display: block;
+        padding: 10px;
+        color: rgb(0, 0, 0);
+        background-color: rgb(255, 255, 255);
+        text-decoration: none;
+        margin-top: auto;
+        margin-right: auto;
+       }
+       .about__wrap-left{
+        display: flex;
+        flex-direction: column;
+       }
    
        
