--- a/styles/header.css
+++ b/styles/header.css
@@ -34,7 +34,8 @@
         text-decoration: none;
         color: rgb(0, 0, 0);
        }
-       .header__title{
+       .header__title { 
+        font-size: 30px;
         margin: 0;
        }
        .header{
