--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,2 +1,9 @@
-
-    
+.document__item{
+    margin: 0;
+ padding: 0;
+ list-style-type: none;
+}
+.document__link {
+    text-decoration: none; 
+    color: rgb(0, 0, 0);
+}
