--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,3 @@
-.catalog__title {
-    width: 100%;
-    }
 .catalog__card{
     width: 350px;
     padding: 15px;
@@ -30,10 +27,11 @@
    .catalog__button{
     display: block;
     padding: 10px;
-    background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
+    background-color:#ffffff;
+    color: rgb(0, 0, 0);
     text-decoration: none;
     text-align: center;
+    border: none;
    }
    .catalog__card{
     display: flex;
@@ -73,5 +71,21 @@
         display: flex;
         flex-direction: column;
        }
-   
-       
+.catalog__wrap {
+    display: flex;
+    width: 100%;
+    justify-content:space-between;
+}
+.form {
+    width: 300px;
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+    flex-direction: column;
+}
+.form__button {
+    width: 100%;
+    background-color: #ffffff;
+    color: black;
+
+}
