--- a/styles/main.css
+++ b/styles/main.css
@@ -85,7 +85,7 @@
 }
 .form__button {
     width: 100%;
-    background-color: #ffffff;
+    background-color: rgba(255, 255, 255, 0.5);
     color: black;
 }
 .form__button:hover {
@@ -123,4 +123,53 @@
 }
 .catalog__item-red {
     color: red;
+}
+.applications {
+    position: fixed; /* позицинорование фиксированное */
+    top: 0; /* Элемент будет находиться на верхней границе экрана*/
+    left: 0; /* Элемент будет находиться на левой границе экрана.*/
+    width: 100%;/* Ширина 100% от окна браузера */
+    height: 100%;/* Высота 100% от окна браузера */
+    background-color: rgba(58, 60, 65, 0.7); /*задаем фон Полупрозрачный с цветом */
+}
+.application {
+    position: absolute; /* позиционируется абсолютно*/
+    top: 50%; /* верхняя часть смещена на 50% высоты родителя*/
+    left: 50%;/*левая граница смещена на 50% ширины родителя*/
+    transform: translate(-50%, -50%);/* смещаем элемент относительно его текущего положения*/
+    max-width: 800px;/* Максимальная ширина окна */
+    width: 100%;/* Ширина 100% от родительского элемента */
+    padding: 150px 100px; /* Внутренние отступы: 50px сверху и снизу, 20px слева и справа */
+    display: flex; /*Используем flexbox для выравнивания*/
+    justify-content: center; /* распределяем элементы по центру*/ 
+    align-items: center; /* выравнивание по вертикали */
+    column-gap: 64px; /* отступы между столбцами */
+    background-color: #fefefe; /*фон модального окна*/
+    color: #fff; /*цвет текста*/
+    background-image: url("../images/модальное окно.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+.application__title {
+    font-size: 36px; /*размер шрифта для заголовков*/
+}
+.application__text {
+    margin-top: 20px; /* Отступ сверху */
+    font-size: 20px; /*размер шрифта для текста*/
+}
+.application__form {
+    width: 500px; /*устанавливаем ширину для формы*/
+    display: flex; /*Используем flexbox для выравнивания формы в строку*/
+    flex-direction: column;
+    row-gap: 10px; /* отступы между строками */
+}
+.application__close {
+    position: absolute; /* позиционируется абсолютно*/
+    top: 0; /* Элемент будет находиться на верхней границе родителя*/
+    right: 0; /* элемент будет прижат к правой стороне родителя */
+    padding: 10px; /* Внутренние отступы с каждой стороны 10px*/
+    background-color:  rgba(255, 255, 255, 0); /*фон кнопки*/
+    border: none;
+    font-size: 30px;
 }
