--- a/styles/main.css
+++ b/styles/main.css
@@ -173,3 +173,62 @@
     border: none;
     font-size: 30px;
 }
+.catalog__list {
+    display: flex;
+    flex-wrap: wrap;
+}
+/*Задание 6
+/* Скрываем контент до загрузки */
+.content {
+    display: none;
+}
+.preloader {
+    padding-top: 25%; /* Отступ сверху */
+    background: #ffffff; /* задаем фон при загрузке */
+    transition: opacity 0.5s ease; /* Плавный переход для изменения прозрачности */
+    text-align: center;/* центрируем текст */
+}
+
+.loader span {
+  display: inline-block;/* располагаем элементы в строку */
+  width: 20px;/* Ширина кругов */
+  height: 20px;/* Высота кругов */
+  border-radius: 100%;/* задаем круг */
+  background-color: #c00000;/* Цвет кругов */
+  margin: 35px5px;/* Отступы вокруг кругов */
+}
+.dot1 {
+    animation: bounce 1.5s ease-in-out infinite;/* анимация для первой точки */
+}
+.dot2{
+    animation: bounce 1.5s ease-in-out 0.2s infinite;/*анимация для второй точки с задержкой*/
+}
+
+.dot3 {
+    animation: bounce 1.5s ease-in-out 0.4s infinite;/* анимация для третьей точки с задержкой */
+}
+.dot4 {
+    animation: bounce 1.5s ease-in-out 0.6s infinite;/*анимация для второй точки с задержкой*/
+}
+
+.dot5 {
+    animation: bounce 1.5s ease-in-out 0.8s infinite;/* анимация для третьей точки с задержкой */
+}
+
+/* Анимация bounce: */
+@keyframes bounce {
+    0%,
+    20%,
+    40%,
+    60%,
+    80%,
+    100%
+    {
+        transform: translateY(0);/* круги на месте */
+   }
+
+    25% {
+       transform: translateY(-30px);/* круги поднимаются */
+   }
+}
+
