--- a/styles/main.css
+++ b/styles/main.css
@@ -231,4 +231,23 @@
        transform: translateY(-30px);/* круги поднимаются */
    }
 }
+.swiper-slide {
+    box-shadow: none;
+    border: 1px solid #ebeaea;
+}
+.swiper-button-prev,
+.swiper-button-next {
+    color: #fdb100;
+}
 
+.swiper-pagination-bullet-active {
+    background: #fdb100;
+}
+
+.swiper-button-prev {
+    left: 0;
+}
+
+.swiper-button-next {
+    right: 0;
+}
